adjusted packge.json to assist in app deploment

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "redux-counter",
   "version": "0.1.0",
-  "private": true,
+  "private": true,,
+  "homepage": "https://fraustob.github.io/kilo-counter-deployment/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
