--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redux-counter",
   "version": "0.1.0",
-  "private": true,,
+  "private": true,
   "homepage": "https://fraustob.github.io/kilo-counter-deployment/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.4",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
