--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "deploy": "gh-pages -b deployment -d build",
+    "deploy": "gh-pages -b backup -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
